# slurman

./: README.md  pyproject.toml
slurman/: slurman.py  slurman_cli.py
