[project]
name = "slurman"
version = "1.2.2"
description = "Terminal GUI for easier Slurm experience"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Shenhan Qian", email = "shenhan.qian@tum.de"}
]
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "textual>=0.61.0",
    "pandas",
    "gpustat",
]
[project.scripts]
slurman = "slurman.slurman_cli:slurman_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/ShenhanQian/slurman"
Repository = "https://github.com/ShenhanQian/slurman"
Issues = "https://github.com/ShenhanQian/slurman/issues"
